--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -6,6 +6,8 @@
     <item
         android:id="@+id/exit"
         android:orderInCategory="50"
+        android:icon="@drawable/exit_fill"
         android:title="@string/exit"
-        app:showAsAction="never"/>
+        app:showAsAction="always"/>
+
 </menu>
