--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,9 @@
 
     <TextView
         android:id="@+id/resultTV"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:background="@color/toolbar_background"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/result"
@@ -42,8 +45,8 @@
         android:layout_height="wrap_content"
         tools:ignore="MissingConstraints"
         android:columnCount="4"
-        android:rowCount="7"
-        android:layout_marginTop="40dp"
+        android:rowCount="10"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toBottomOf="@+id/resultTV"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,49 +98,164 @@
             android:layout_column="2"
             android:layout_row="3"/>
         <Button
+            android:id="@+id/aBTN"
+            android:text="A"
+            android:layout_column="0"
+            android:layout_row="4"/>
+        <Button
+            android:id="@+id/bBTN"
+            android:text="B"
+            android:layout_column="1"
+            android:layout_row="4"/>
+        <Button
+            android:id="@+id/cBTN"
+            android:text="C"
+            android:layout_column="2"
+            android:layout_row="4"/>
+        <Button
+            android:id="@+id/dBTN"
+            android:text="D"
+            android:layout_column="0"
+            android:layout_row="5"/>
+        <Button
+            android:id="@+id/eBTN"
+            android:text="E"
+            android:layout_column="1"
+            android:layout_row="5"/>
+        <Button
+            android:id="@+id/fBTN"
+            android:text="F"
+            android:layout_column="2"
+            android:layout_row="5"/>
+        <Button
             android:id="@+id/zeroBTN"
             android:text="0"
             android:layout_column="0"
-            android:layout_row="4"
+            android:layout_row="6"
             android:layout_width="180dp"
             android:layout_columnSpan="2"/>
         <Button
             android:id="@+id/divBTN"
             android:text="/"
+            android:layout_column="2"
+            android:layout_row="0"
+            android:layout_width="180dp"
+            android:layout_columnSpan="2"/>
+        <Button
+            android:id="@+id/dotBTN"
+            android:text="."
             android:layout_column="3"
-            android:layout_row="0"/>
+            android:layout_row="1"/>
         <Button
             android:id="@+id/mulBTN"
             android:text="*"
-            android:layout_column="3"
-            android:layout_row="1"/>
+            android:layout_column="0"
+            android:layout_row="0"
+            android:layout_width="180dp"
+            android:layout_columnSpan="2"/>
         <Button
             android:id="@+id/subBTN"
             android:text="-"
             android:layout_column="3"
-            android:layout_row="2"/>
+            android:layout_row="2"
+            android:layout_rowSpan="2"
+            android:layout_height="100dp"/>
         <Button
             android:id="@+id/sumBTN"
             android:text="+"
             android:layout_column="3"
-            android:layout_row="3"
-            android:layout_rowSpan="3"
-            android:layout_height="150dp"/>
+            android:layout_row="4"
+            android:layout_rowSpan="2"
+            android:layout_height="100dp"/>
 
         <Button
             android:id="@+id/equBTN"
             android:text="="
-            android:layout_column="0"
-            android:layout_row="5"
-            android:layout_width="270dp"
-            android:layout_columnSpan="3"/>
+            android:layout_column="2"
+            android:layout_row="6"
+            android:layout_width="180dp"
+            android:layout_columnSpan="2"/>
         <Button
             android:id="@+id/resBTN"
             android:text="reset"
             android:layout_column="0"
-            android:layout_row="6"
+            android:layout_row="7"
             android:layout_width="360dp"
             android:layout_columnSpan="4"/>
+
+
+        <TextView
+            android:id="@+id/binTV"
+            android:layout_column="0"
+            android:layout_row="8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/bin"
+            android:layout_margin="20dp"
+            />
+        <TextView
+            android:id="@+id/decTV"
+            android:layout_column="1"
+            android:layout_row="8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/des"
+            android:layout_margin="20dp"
+            />
+        <TextView
+            android:id="@+id/octTV"
+            android:layout_column="2"
+            android:layout_row="8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/oct"
+            android:layout_margin="20dp"
+            />
+        <TextView
+            android:id="@+id/hexTV"
+            android:layout_column="3"
+            android:layout_row="8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/hex"
+            android:layout_margin="20dp"
+            />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/binSC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="9"
+            android:layout_column="0"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/decSC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="9"
+            android:layout_column="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/octSC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="9"
+            android:layout_column="2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/hexSC"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="9"
+            android:layout_column="3"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </GridLayout>
 
